# tbp.tbs_sensorimotor_intelligence

./: .gitignore  README.md  analyze_flops.py  count_params.py  download.py  environment.yml  old_analyze_flops.py  pyproject.toml  run.py  run_parallel.py
configs/: __init__.py  experiments.py  view_finder_images.py
monty/: README.md  environment.yml  pyproject.toml  run.py  run_parallel.py
monty/configs/: README.md  __init__.py  common.py  continual_learning_utils.py  fig3_robust_sensorimotor_inference.py  fig4_rapid_inference_with_voting.py  fig4_structured_object_representations.py  fig5_rapid_inference_with_model_based_policies.py  fig5_rapid_inference_with_voting.py  fig6_rapid_inference_with_model_based_policies.py  fig6_rapid_inference_with_voting.py  fig6_rapid_learning.py  fig7_continual_learning.py  fig7_flops.py  fig7_rapid_learning.py  fig7b_continual_learning.py  fig8_flops.py  fig8_multimodal_transfer.py  fig9_structured_object_representations.py  names.py  pretraining_experiments.py  view_finder_images.py  visualizations.py
monty/scripts/: data_utils.py  evidence_analysis.py  plot_utils.py  render_view_finder_images.py  visualize_multilm_patches.py
pytorch/: README.md  REPRODUCE_RESULTS.md  environment.yaml  pyproject.toml
pytorch/configs/: README.md  eval.yaml  train.yaml
pytorch/configs/callbacks/: continual_learning_callbacks.yaml  default.yaml  full_train_callbacks.yaml  model_checkpoint.yaml  rich_progress_bar.yaml  train_acc_threshold.yaml
pytorch/configs/callbacks/definitions/: early_stopping.yaml  log_predictions.yaml  lr_logger.yaml  model_checkpoint.yaml  train_acc_threshold.yaml
pytorch/configs/callbacks/presets/: continual_learning_callbacks.yaml  default.yaml  full_train_callbacks.yaml
pytorch/configs/data/: ycb_continual.yaml  ycb_standard.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/: README.md  optimized_config.yaml  starting_config.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/01_early_stopping/: no_early_stopping.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/02_gradient_clipping/: gradient_clip_1.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/03_frozen_backbone/: frozen_backbone.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/04_data_augmentation/: train_data_augment.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/05_multilayer_heads/: default.yaml  multilayer_heads.yaml  norm_linear_heads.yaml  two_layer_mlp_heads.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/06_warmup_cosine_decay/: warmup_cosine_decay.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/07_adamw_optimizer/: adamw.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/08_differential_lrs/: differential_lr.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/09_rotation_weights/: lambda_0.1.yaml  lambda_1.yaml  lambda_3.yaml  lambda_5.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/10_ablate_data_aug/: ablate_data_aug.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/11_learning_rates/: lr_1e-3.yaml  lr_1e-4.yaml  lr_1e-5.yaml  lr_3e-4.yaml  lr_3e-5.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/12_learning_rates_p2/: lr_2e-4.yaml  lr_4e-4.yaml  lr_5e-4.yaml  lr_6e-4.yaml  lr_7e-4.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/13_baseline_models/: vit_b16.yaml  vit_b32.yaml  vit_h14.yaml  vit_l16.yaml  vit_l32.yaml
pytorch/configs/experiment/01_hyperparameter_optimization/14_train_from_scratch_lrs/: vit_b16_1e-3.yaml  vit_b16_1e-4.yaml  vit_b16_1e-5.yaml  vit_b16_5e-3.yaml  vit_b16_5e-4.yaml  vit_b16_5e-5.yaml  vit_b16_5e-6.yaml
pytorch/configs/experiment/03_fig7b_continual_learning/inference/: eval_continual_learning.yaml
pytorch/configs/experiment/03_fig7b_continual_learning/train/: task0.yaml  task1+.yaml
pytorch/configs/experiment/99_sanity_check/: 0_control_rgbd_classification.yaml  1_rgb_classification.yaml  pretrained_25epochs.yaml  random_init_75epochs.yaml  rgb_classification.yaml
pytorch/configs/experiments/01_hyperparameter_optimization/: optimized_config.yaml  starting_config.yaml
pytorch/configs/experiments/01_hyperparameter_optimization/02_gradient_clipping/: gradient_clip_1.yaml
pytorch/configs/experiments/01_hyperparameter_optimization/03_frozen_backbone/: frozen_backbone.yaml
pytorch/configs/experiments/99_sanity_check/: 0_control_rgbd_classification.yaml  pretrained_25epochs.yaml  random_init_75epochs.yaml
pytorch/configs/hydra/: default.yaml
pytorch/configs/logger/: wandb.yaml
pytorch/configs/model/: base_vit_module.yaml  continual_vit_module.yaml
pytorch/configs/paths/: default.yaml  reproduction.yaml
pytorch/configs/trainer/: cpu.yaml  ddp.yaml  ddp_sim.yaml  default.yaml  gpu.yaml  mps.yaml
pytorch/scripts/: fig7a_rapid_learning.sh  fig7b_continual_learning.sh  fig8b_flops.sh  quick_test.sh  run_all_experiments.sh  run_all_experiments_1epoch.sh  setup_and_test.sh  verify_setup.py
pytorch/src/: eval_continual.py  eval_standard.py  train.py
pytorch/src/callbacks/: log_predictions.py  train_acc_threshold.py
pytorch/src/data/: base_ycb_datamodule.py  ycb_continual_datamodule.py  ycb_standard_datamodule.py
pytorch/src/data/components/: ycb_dataset.py
pytorch/src/data/transforms/: rgbd_normalization.py
pytorch/src/losses/: loss.py
pytorch/src/metrics/: continual_accuracy.py  rotation_error.py
pytorch/src/models/: base_vit_module.py  continual_vit_module.py
pytorch/src/models/components/: norm_linear_head.py  rgbd_vit.py
pytorch/src/utils/: __init__.py  continual_learning_utils.py  eval_utils.py  instantiators.py  lightning_utils.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
scripts/: count_model_init_flops.py  count_monty_params.py  count_vit_flops.py  data_utils.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig7a_rapid_learning.sh  fig8.py  overview.py  plot_utils.py  render_view_finder_images.py
(+62 files in other folders)
